Fixed the logo issue on mobile

--- a/assets/css/quick-website.css
+++ b/assets/css/quick-website.css
@@ -26077,7 +26077,7 @@ article p
 {
     .navbar-expand-lg .navbar-brand img
     {
-        height: 1.75rem;
+        height: 2.75rem;
     }
     .navbar-expand-lg .navbar-brand.dropdown-toggle:after
     {
